# django-project-my

./: Dockerfile  demo.py  devices.csv  docker-compose.yaml  orders.csv  pyproject.toml  requirements.txt
api/: shopapp-order-fixtures.json
api/api/: settings.py  urls.py
api/blogapp/: models.py  sitemap.py  urls.py  views.py
api/blogapp/templates/blogapp/: article_detail.html  article_list.html
api/locale/en/LC_MESSAGES/: django.po
api/locale/ru/LC_MESSAGES/: django.po
api/myapiapp/: serializers.py  urls.py  views.py
api/myauth/: forms.py  models.py  tests.py  urls.py  views.py
api/myauth/management/commands/: bind_user.py
api/myauth/templates/myauth/: about-me.html  login.html  user-details.html  user_update_form.html  users-list.html
api/myrequests/: apps.py  middleware.py  urls.py  views.py
api/myrequests/templates/requests/: base.html  throttling-error.html
api/requests/: apps.py  forms.py  middleware.py  urls.py  views.py
api/requests/templates/requests/: file-too-big-error.html  file-upload.html  request-query-params.html  user-bio-form.html
api/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
api/shopapp/fixtures/: order-fixture.json  product-fixture.json  user-fixture.json
api/shopapp/management/commands/: agg.py  bulk_actions.py  create_order.py  create_products.py  selecting_fields.py  update_order.py
api/shopapp/templates/admin/: json-form.html
mysite/mysite/: settings.py
mysite/shopapp/: urls.py  views.py
(+20 files in other folders)
